stateful/istio/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: stateful-gateway
spec:
  # Selector to determine which Istio Ingress Gateway to use
  # This should match the labels on your Istio Ingress Gateway deployment
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "test.onefirefly.com" # Frontend application
        - "api.onefirefly.com" # API Gateway and microservices
  # - port:
  #     number: 443
  #     name: https
  #     protocol: HTTPS
  #   tls:
  #     mode: SIMPLE
  #     credentialName: onefirefly-tls
  #   hosts:
  #   - "test.onefirefly.com"
  #   - "api.onefirefly.com"
